[package]
name = "ledb-actix"
version = "0.2.1"
authors = ["Kayo <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/katyo/ledb"
homepage = "https://github.com/katyo/ledb/tree/master/ledb-actix"
keywords = ["actor", "rest", "storage", "json", "lmdb"]
categories = ["database", "web-programming", "asynchronous"]
description = "LEDB Actor for Actix actor framework and storage REST-interface"

[badges]
travis-ci = { repository = "katyo/ledb" }
appveyor = { repository = "katyo/ledb" }

[[example]]
name = "simple"

[[example]]
name = "server"
required-features = ["web"]

[dependencies]
serde = "1"
serde_derive = { version = "1", optional = true }
serde_with = { version = "0.2", optional = true, features = ["json"] }
ledb = { version = "0.2", path = "../ledb" }
futures = "0.1"
actix = "0.7"
actix-web = { version = "0.7", optional = true }

[dev-dependencies]
serde_derive = "1"
serde_json = "1"
futures = "0.1"
tokio = "0.1"
ledb-types = { version = "0.2", path = "../ledb-types" }
ledb-derive = { version = "0.2", path = "../ledb-derive" }
actix-web = "0.7"
log = "0.4"
pretty_env_logger = "0.1"

[features]
default = []
web = ["serde_derive", "serde_with", "actix-web"]
