[package]
name = "ledb-actix"
version = "0.4.0"
authors = ["Kayo <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/katyo/ledb"
homepage = "https://github.com/katyo/ledb/tree/master/ledb-actix"
keywords = ["actor", "rest", "storage", "json", "lmdb"]
categories = ["database", "web-programming", "asynchronous"]
description = "LEDB Actor for Actix actor framework and storage REST-interface"
edition = "2018"

[badges]
travis-ci = { repository = "katyo/ledb" }
appveyor = { repository = "katyo/ledb" }

[[example]]
name = "simple"

[[example]]
name = "server"
required-features = ["web"]

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_with = { version = "^0.2", optional = true, features = ["json"] }
ledb = { version = "0.4", path = "../ledb", features = ["derive"] }
ledb-types = { version = "0.4", path = "../ledb-types" }
futures = "^0.3"
actix = "^0.9"
actix-web = { version = "^2", optional = true }

[dev-dependencies]
serde_json = "^1"
futures = "^0.3"
actix-rt = "^1"
actix-web = "^2"
log = "^0.4"
pretty_env_logger = "^0.4"

[features]
default = []
web = ["serde_with", "actix-web"]

[package.metadata.docs.rs]
features = ["web"]
