[package]
name = "ledb-derive"
version = "0.3.0"
authors = ["Kayo <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/katyo/ledb"
homepage = "https://github.com/katyo/ledb/tree/master/ledb"
keywords = ["storage", "document", "database", "index"]
categories = ["database"]
description = "Derive macros for defining storable documents"

[badges]
travis-ci = { repository = "katyo/ledb" }
appveyor = { repository = "katyo/ledb" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
ledb-types = { version = "0.3", path = "../ledb-types" }
ledb = { version = "0.3", path = "../ledb" }
