[package]
name = "ledb"
version = "0.2.0"
authors = ["Kayo <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/katyo/ledb"
homepage = "https://github.com/katyo/ledb/tree/master/ledb"
keywords = ["storage", "json", "cbor", "lmdb", "btree"]
categories = ["database"]
description = "Lightweight embedded database built over LMDB"

[badges]
travis-ci = { repository = "katyo/ledb" }
appveyor = { repository = "katyo/ledb" }

[dependencies]
byteorder = "1"
ordered-float = "1"
serde = "1"
serde_derive = "1"
serde_cbor = "0.9"
ron = "0.4"
ledb-types = { version = "0.2", path = "../ledb-types", features = ["json", "cbor"] }
lmdb-zero = "0.4"
regex = "1"
supercow = "0.1"
dirs = "1"
dunce = "0.1"

[dev-dependencies]
serde_json = "1"
ledb-derive = { version = "0.2", path = "../ledb-derive" }
