[package]
name = "ledb"
version = "0.3.0"
authors = ["Kayo <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/katyo/ledb"
homepage = "https://github.com/katyo/ledb/tree/master/ledb"
keywords = ["storage", "json", "cbor", "lmdb", "btree"]
categories = ["database"]
description = "Lightweight embedded database built over LMDB"


[badges]
travis-ci = { repository = "katyo/ledb" }
appveyor = { repository = "katyo/ledb" }

[dependencies]
byteorder = "1.0"
ordered-float = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
ron = "0.5"
ledb-types = { version = "0.3", path = "../ledb-types", features = ["json", "cbor"] }
ledb-derive = { version = "0.3", path = "../ledb-derive", optional = true }
lmdb-zero = "0.4"
regex = "1"
supercow = "0.1"
dirs = "2"
dunce = "1"

[dev-dependencies]
serde_json = "1"
ledb-derive = { version = "0.3", path = "../ledb-derive", optional = false }

[features]
default = ["derive"]
derive = ["ledb-derive"]
