[package]
name = "ledb-node"
version = "0.4.0"
authors = ["Kayo <kayo@illumium.org>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "ledb_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4"

[dependencies]
ledb = "0.4"
neon = "0.4"
neon-serde = "0.4"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[patch.crates-io]
ledb = { path = "../../ledb" }
#ledb = { git = "https://github.com/katyo/ledb" }
